# ohtuvarasto

./: .coverage  .pylintrc  README.md  jee.txt  pyproject.toml
.github/workflows/: main.yml
dir1/: jep.txt
dir2/: txt.txt
palrep/osa3/hello-robot/: log.html  output.xml  report.html
palrep/osa3/login-robot/src/: log.html  output.xml  report.html
palrep/osa3/login-robot/src/tests/: login.robot  register.robot
palrep/osa4/: .coverage
palrep/osa4/maksukortti-mock/src/: .coverage
palrep/osa4/maksukortti-mock/src/tests/: kassapaate_test.py
palrep/viikko4/: retro.md
src/: index.py  varasto.py
src/tests/: varasto_test.py
