[tool.poetry]
name = "ohtuvarasto"
version = "0.1.0"
description = ""
authors = ["Matti Luukkainen"]
readme = "README.md"
packages = [{ include = "ohtuvarasto", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
cowsay = "^6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
coverage = "^7.11.0"
pylit = "^0.8.0"
pylint = "^4.0.2"
robotframework = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
